[project]
name = "pytest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "future==1.0.0",
    "pyee==13.0.1",
    "pymediainfo>=7.0.1",
    "python-ffmpeg==2.0.12",
    "tqdm>=4.68.3",
    "typing-extensions==4.15.0",
]
